--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "colors": "^1.1.2",
     "commander": "^2.14.1",
     "firebase-admin": "^5.9.1"
+  },
+  "devDependencies": {
+    "@types/core-js": "^0.9.46"
   }
 }
