--- a/package.json
+++ b/package.json
@@ -4,14 +4,39 @@
   "description": "Firestore data import and export",
   "main": "./dist/index.js",
   "repository": "https://github.com/jloosli/node-firestore-import-export",
+  "homepage": "https://github.com/jloosli/node-firestore-import-export#readme",
   "author": "Jared Loosli <jloosli@gmail.com>",
   "license": "MIT",
+  "keywords": [
+    "firebase",
+    "firestore",
+    "import",
+    "export"
+  ],
+  "bugs": {
+    "url": "https://github.com/jloosli/node-firestore-import-export/issues"
+  },
+  "scripts": {
+    "export": "./dist/bin/export.js",
+    "import": "./dist/bin/import.js",
+    "build": "tsc"
+  },
+  "bin": {
+    "export": "./dist/bin/export.js",
+    "import": "./dist/bin/import.js"
+  },
   "dependencies": {
-    "colors": "^1.1.2",
+    "@google-cloud/firestore": "^0.12.0",
+    "colors": "^1.2.0-rc0",
     "commander": "^2.14.1",
-    "firebase-admin": "^5.9.1"
+    "firebase-admin": "^5.9.1",
+    "firebase-functions": "^0.8.1"
   },
   "devDependencies": {
-    "@types/core-js": "^0.9.46"
+    "@types/core-js": "^0.9.46",
+    "@types/node": "^9.4.6",
+    "chai": "^4.1.2",
+    "mocha": "^5.0.4",
+    "typescript": "^2.7.2"
   }
 }
