--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/node": "^9.4.6",
     "chai": "^4.1.2",
     "mocha": "^5.0.4",
+    "ts-node": "^5.0.1",
     "typescript": "^2.7.2"
   }
 }
