Fixed export to handle a base level document (and collections) correctly. Working on import

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,12 +21,13 @@
       "./@types"
     ]
   },
-  "include": [
-    "src/bin/firestore-export.ts",
-    "src/lib/export.ts"
-  ],
+//  "include": [
+//    "src/bin/firestore-export.ts",
+//    "src/lib/export.ts"
+//  ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "dist"
   ],
   "compileOnSave": true
 }
