--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "export": "./dist/bin/export.js",
     "import": "./dist/bin/import.js"
   },
+  "preferGlobal": true,
   "dependencies": {
     "@google-cloud/firestore": "^0.12.0",
     "@types/load-json-file": "^2.0.7",
