--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-firestore-import-export",
-  "version": "1.0.0",
+  "version": "0.5.1",
   "description": "Firestore data import and export",
   "main": "./dist/index.js",
   "repository": "https://github.com/jloosli/node-firestore-import-export",
@@ -20,7 +20,8 @@
     "export": "./dist/bin/firestore-export.js",
     "import": "./dist/bin/firestore-import.js",
     "build": "tsc",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "clean": "rm -rf dist && mkdir dist"
   },
   "bin": {
     "export": "./dist/bin/export.js",
@@ -28,8 +29,7 @@
   },
   "preferGlobal": true,
   "dependencies": {
-    "@google-cloud/firestore": "^0.12.0",
-    "@types/load-json-file": "^2.0.7",
+    "@google-cloud/firestore": "^0.13.0",
     "colors": "^1.2.0-rc0",
     "commander": "^2.14.1",
     "core-js": "^2.5.3",
@@ -38,10 +38,10 @@
     "load-json-file": "^4.0.0"
   },
   "devDependencies": {
+    "@types/commander": "^2.12.2",
     "@types/core-js": "^0.9.46",
+    "@types/load-json-file": "^2.0.7",
     "@types/node": "^9.4.6",
-    "chai": "^4.1.2",
-    "mocha": "^5.0.4",
     "ts-node": "^5.0.1",
     "typescript": "^2.7.2"
   }
