--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-firestore-import-export",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "description": "Firestore data import and export",
   "main": "./dist/index.js",
   "repository": "https://github.com/jloosli/node-firestore-import-export",
@@ -19,13 +19,13 @@
   "scripts": {
     "export": "./dist/bin/firestore-export.js",
     "import": "./dist/bin/firestore-import.js",
-    "build": "tsc",
+    "build": "npm run clean && tsc",
     "watch": "tsc -w",
     "clean": "rm -rf dist && mkdir dist"
   },
   "bin": {
-    "export": "./dist/bin/export.js",
-    "import": "./dist/bin/import.js"
+    "firestore-export": "./dist/bin/firestore-export.js",
+    "firestore-import": "./dist/bin/firestore-import.js"
   },
   "preferGlobal": true,
   "dependencies": {
