--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "core-js": "^2.5.3",
     "firebase-admin": "^5.9.1",
     "firebase-functions": "^0.8.1",
-    "load-json-file": "^4.0.0"
+    "load-json-file": "^4.0.0",
+    "prompt": "^1.0.0"
   },
   "devDependencies": {
     "@types/commander": "^2.12.2",
