--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-firestore-import-export",
   "version": "0.6.5",
   "description": "Firestore data import and export",
-  "main": "./dist/index.js",
+  "main": "./dist/lib/index.js",
   "repository": "https://github.com/jloosli/node-firestore-import-export",
   "homepage": "https://github.com/jloosli/node-firestore-import-export#readme",
   "author": "Jared Loosli <jloosli@gmail.com>",
