--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es6",
+    "module": "CommonJS",
+    "target": "es5",
+    "moduleResolution": "node",
     "sourceMap": false,
     "strict": true,
     "declaration": true,
