--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
       "es6",
       "es2015",
       "es2017",
-      "dom"
+      "dom",
+      "es2017.object"
     ],
     "typeRoots": [
       "node_modules/@types",
