--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "commander": "^2.14.1",
     "core-js": "^2.5.5",
     "firebase-admin": "^5.9.1",
-    "firebase-functions": "^0.8.1",
+    "firebase-functions": "^1.0.1",
     "load-json-file": "^4.0.0",
     "prompt": "^1.0.0"
   },
@@ -47,12 +47,13 @@
     "@types/commander": "^2.12.2",
     "@types/core-js": "^0.9.46",
     "@types/load-json-file": "^2.0.7",
-    "@types/mocha": "^2.2.48",
+    "@types/mocha": "^5.0.0",
     "@types/node": "^9.4.6",
     "chai": "^4.1.2",
+    "firebase-functions-test": "^0.1.1",
     "firebase-mock": "^2.1.8",
     "mocha": "^5.0.4",
-    "ts-node": "^5.0.1",
+    "ts-node": "^6.0.0",
     "typescript": "^2.7.2"
   }
 }
