--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "import": "node ./dist/bin/firestore-import.js",
     "build": "npm run tests && npm run clean && tsc",
     "watch": "tsc -w",
-    "clean": "rm -rf dist && mkdir dist",
+    "clean": "node ./src/bin/clean.js",
     "tests": "mocha -r ts-node/register tests/**/*.spec.ts"
   },
   "bin": {
@@ -52,6 +52,7 @@
     "@types/mocha": "^2.2.48",
     "@types/node": "^9.4.6",
     "chai": "^4.1.2",
+    "del": "^3.0.0",
     "firebase-mock": "^2.1.8",
     "mocha": "^5.0.4",
     "ts-node": "^5.0.1",
