--- a/package.json
+++ b/package.json
@@ -36,27 +36,27 @@
   "preferGlobal": true,
   "dependencies": {
     "@google-cloud/firestore": "^0.18.0",
-    "colors": "^1.2.0-rc0",
-    "commander": "^2.14.1",
-    "core-js": "^2.5.5",
+    "colors": "^1.3.2",
+    "commander": "^2.19.0",
+    "core-js": "^2.5.7",
     "firebase-admin": "^6.1.0",
     "firebase-functions": "^2.1.0",
     "load-json-file": "^5.0.0",
     "prompt": "^1.0.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.2",
+    "@types/chai": "^4.1.7",
     "@types/commander": "^2.12.2",
     "@types/core-js": "^2.5.0",
     "@types/load-json-file": "^2.0.7",
     "@types/mocha": "^5.0.0",
-    "@types/node": "^10.3.1",
+    "@types/node": "^10.3.6",
     "@types/color": "^3.0.0",
     "chai": "^4.1.2",
     "del": "^3.0.0",
-    "firebase-mock": "^2.1.8",
+    "firebase-mock": "^2.2.10",
     "firebase-server": "^1.0.0",
-    "mocha": "^5.0.4",
+    "mocha": "^5.2.0",
     "ts-node": "^7.0.1",
     "typescript": "^3.1.6"
   }
