--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "strict": true,
     "declaration": true,
     "noImplicitAny": true,
+    "esModuleInterop": true,
     "outDir": "./dist/",
     "rootDirs": [
       "./src/bin",
