--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "prepublish": "npm run snyk-protect"
   },
   "bin": {
-    "firestore-export": "./dist/bin/firestore-export.js",
+    "firestore-clear": "./dist/bin/firestore-clear.js",
     "firestore-import": "./dist/bin/firestore-import.js",
-    "firestore-clear": "./dist/bin/firestore-clear.js"
+    "firestore-export": "./dist/bin/firestore-export.js"
   },
   "engines": {
     "node": ">=8.0"
@@ -57,8 +57,8 @@
     "chai": "^4.1.2",
     "del": "^5.0.0",
     "firebase-mock": "^2.2.10",
-    "snyk": "^1.189.0",
     "mocha": "^7.0.1",
+    "snyk": "^1.189.0",
     "ts-node": "^8.0.2",
     "typescript": "^3.1.6"
   },
