--- a/package.json
+++ b/package.json
@@ -41,12 +41,12 @@
   "dependencies": {
     "@google-cloud/firestore": "^3.5.0",
     "colors": "^1.3.2",
-    "commander": "^4.1.1",
+    "commander": "^5.1.0",
     "core-js": "^3.1.3",
+    "enquirer": "^2.3.5",
     "firebase-admin": "^8.3.0",
     "firebase-functions": "^3.2.0",
-    "load-json-file": "^6.2.0",
-    "prompt": "^1.0.0"
+    "load-json-file": "^6.2.0"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
