--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v8-dependencies-
 
-      - run: yarn install
+      - run: yarn install --ignore-engines
 
       - save_cache:
           paths:
@@ -47,12 +47,36 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v-10-dependencies-
 
-      - run: yarn install
+      - run: yarn install --ignore-engines
 
       - save_cache:
           paths:
             - node_modules
           key: v-10-dependencies-{{ checksum "package.json" }}
+
+      # run tests!
+      - run: yarn tests
+
+  build-node12:
+    <<: *defaults
+    docker:
+      # specify the version you desire here
+      - image: circleci/node:12-stretch
+    steps:
+      - checkout
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+            - v-12-dependencies-{{ checksum "package.json" }}
+            # fallback to using the latest cache if no exact match is found
+            - v-12-dependencies-
+
+      - run: yarn install --ignore-engines
+
+      - save_cache:
+          paths:
+            - node_modules
+          key: v-12-dependencies-{{ checksum "package.json" }}
 
       # run tests!
       - run: yarn tests
@@ -63,3 +87,4 @@ workflows:
     jobs:
       - build-node8
       - build-node10
+      - build-node12
