--- a/package.json
+++ b/package.json
@@ -22,9 +22,8 @@
     "export": "node ./dist/bin/firestore-export.js",
     "import": "node ./dist/bin/firestore-import.js",
     "clear": "node ./dist/bin/firestore-clear.js",
-    "build": "npm run tests && npm run clean && tsc",
+    "build": "npm run tests && gts clean && tsc",
     "watch": "tsc -w",
-    "clean": "node ./src/bin/clean.js",
     "tests": "mocha -r ts-node/register tests/**/*.spec.ts",
     "snyk-protect": "snyk protect",
     "prepare": "npm run build && npm run snyk-protect",
@@ -51,9 +50,8 @@
     "@types/chai": "^4.3.4",
     "@types/color": "^3.0.3",
     "@types/mocha": "^10.0.1",
-    "@types/node": "^18.11.16",
+    "@types/node": "^18.11.17",
     "chai": "^4.3.7",
-    "del": "^7.0.0",
     "firebase-mock": "^2.3.2",
     "gts": "^3.1.1",
     "mocha": "^10.2.0",
