--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "build": "npm run tests && gts clean && tsc",
     "watch": "tsc -w",
     "tests": "mocha -r ts-node/register tests/**/*.spec.ts",
-    "snyk-protect": "snyk protect",
-    "prepare": "npm run build && npm run snyk-protect",
+    "prepare": "npm run build",
     "lint": "gts lint",
     "fix": "gts fix"
   },
@@ -43,20 +42,18 @@
     "colors": "^1.4.0",
     "commander": "^10.0.0",
     "enquirer": "^2.3.6",
-    "firebase-admin": "^11.5.0"
+    "firebase-admin": "^11.6.0"
   },
   "devDependencies": {
     "@types/chai": "^4.3.4",
     "@types/color": "^3.0.3",
     "@types/mocha": "^10.0.1",
-    "@types/node": "^18.14.6",
+    "@types/node": "^18.15.11",
     "chai": "^4.3.7",
     "firebase-mock": "^2.3.2",
     "gts": "^3.1.1",
     "mocha": "^10.2.0",
-    "snyk": "^1.1115.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
-  },
-  "snyk": true
+    "typescript": "^5.0.4"
+  }
 }
