--- a/package.json
+++ b/package.json
@@ -35,20 +35,20 @@
     "firestore-export": "./dist/bin/firestore-export.js"
   },
   "engines": {
-    "node": ">=8.0"
+    "node": ">=16.0"
   },
   "preferGlobal": true,
   "dependencies": {
+    "@google-cloud/firestore": "^6.7.0",
     "colors": "^1.4.0",
     "commander": "^11.0.0",
-    "enquirer": "^2.4.1",
-    "firebase-admin": "^11.10.1"
+    "enquirer": "^2.4.1"
   },
   "devDependencies": {
     "@types/chai": "^4.3.6",
     "@types/color": "^3.0.4",
     "@types/mocha": "^10.0.1",
-    "@types/node": "^20.6.3",
+    "@types/node": "^20.6.5",
     "chai": "^4.3.8",
     "firebase-mock": "^2.3.2",
     "gts": "^5.0.1",
